<resources>
    <string name="app_name">OkeyClickUser</string>
    <string name="username">Email or Mobile Number</string>

    <string name="spanish_lang">Español</string>
    <string name="login">Login</string>
    <string name="skip">Skip</string>
    <string name="signup_txt">Sign up as user</string>
    <string name="apikey">fbb36f24d9b3985aa86fa37fd51c29eb</string>
    <string name="v_code">1.0</string>

    <string name="invite_and_earn">"Invite &amp; Earn"</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="term_and_condition">Terms &amp; conditions</string>
    <string name="data_protection_low">Data Protection Low</string>
    <string name="site_url"><a href="http://www.okayclick.com">www.okayclick.com</a></string>
    <string name="title_activity_sub_service_pager">SubServicePagerActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="book_now">Book Now</string>
    <string name="book_later">Book Later</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="google_map_api_key">AIzaSyB3Vt-OiiNP9zsGYd7Lip-gI85Okejq0eU</string>

    <string name="or_txt_login">--------OR--------</string>
    <string name="home_menu_nav">Home</string>
    <string name="account_menu_nav">Account</string>
    <string name="service_history_menu_nav">Service History</string>
    <string name="payment_history_menu_nav">Payment History</string>
    <string name="report_issues_menu_nav">Report Issues</string>
    <string name="contact_us_menu_nav">Contact Us</string>
    <string name="logout_menu_nav">Logout</string>
    <string name="string_content_inavail_fragment">This package is good package for the uer !</string>
    <string name="pending_customer_request">Request sent to 5 nearest provider...</string>
    <string name="notification_activity_text">There are no notifications</string>
    <string name="schedule_visit_txt">Schedule a Visit</string>

    <string name="server_key">AIzaSyCD42eqt4BAMw-9y4sqLF0Ac6xV_ZxzOo4</string>

    <string name="view_profile_txt">Profile</string>
    <string name="call_txt">Call</string>
    <string name="reviews_txt">Reviews</string>
    <string name="details_txt">Details</string>
    <string name="connecting_text">Connecting....</string>
    <string name="title_activity_invoice">InvoiceActivity</string>

    <string name="notification_channel_id">channel_1</string>
    <string name="apply_coupen">Apply Coupen</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="report_and_issue"><![CDATA[Report & Issue]]></string>
    <string name="service_feedback">Service Feedback</string>
    <string name="other">Other</string>
    <string name="submit">Submit</string>
    <string name="feedback_revert">\"Our Customer Service Team will respond to you in less than 48 hours\"</string>
    <string name="customer_care_number">Customer Care Phone</string>
    <string name="connecting_nearest_5_provider">Connecting Nearest 5 provider...</string>
    <string name="title_activity_service_history">ServiceHistoryActivity</string>
    <string name="service_history">Service History</string>
    <string name="choos_coupen">Choose Coupon</string>
    <string name="no_coupon">No Coupons</string>
    <string name="no_coupon_msg">Sorry ! There are no coupons for you.</string>
    <string name="all_services">All Services</string>
    <string name="uro">\u20ac</string>
    <string name="upcomming">Upcomming</string>
    <string name="completed">Completed</string>
    <string name="invit_text_bold"><![CDATA[Invite Your Friend & Earn \u20ac  5]]></string>
    <string name="invite_text">\"When you invite  a friend to book a service through our app. You will recieve 5 \u20ac in wallet.\"</string>
    <string name="call_now_txt">Call Now</string>
    <string name="link_to_web_site">Link To Web Site</string>
    <string name="faq">FAQS</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="pay_txt">Pay</string>
    <string name="payble_amount">Payble Amount</string>
    <string name="schedule_service">Schedule Service</string>
    <string name="title_activity_book_letar">BookLetarActivity</string>
    <string name="cancel_text">Cancel</string>
    <string name="paid_text">Paid</string>
    <string name="accept_request">Accept Request</string>
    <string name="start_job_journey">Start Job Journey</string>
    <string name="arrive">Arrived your location</string>
    <string name="start_job">Start Job</string>
    <string name="finish_job_sp_side">Finish Job from sp side</string>
    <string name="task_process">Task Process :</string>
    <string name="confirm_complete">Confirm Complete</string>
    <string name="show_date_format">MMM dd, yyyy</string>
    <string name="date_time_format_from_web">yyyy-MM-d H:m:s</string>
    <string name="pay_now">Pay Now</string>
    <string name="title_activity_task_details">TaskDetailsActivity</string>
    <string name="fill_first_name">Please fill valid first name !</string>
    <string name="valid_last_name">Please fill valid last name !</string>
    <string name="password_must_6">Password must be length of 6 !</string>
    <string name="confirm_password_not_match">confirm password does not match !</string>
    <string name="valid_email">Entor a valid email !</string>
    <string name="valid_mobile_msg">Entor a valid mobile number !</string>
    <string name="otp_invalid">OTP is invalid !</string>
    <string name="create_your_account">Create your account</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="referral_code">Referral Code</string>
    <string name="enter_your_mobile_no">Enter your mobile no.</string>
    <string name="request_otp">Request OTP</string>
    <string name="enter_otp">Enter Otp</string>
    <string name="register">Register</string>
    <string name="title_activity_start_job">StartJobActivity</string>
    <string name="services">Services</string>
    <string name="add_account">Add</string>
    <string name="no_save_cards">No Save Cards</string>
    <string name="stripe_api_secret_key">sk_test_r9OD2Z6WDNC9RwD6jNh3VZSe</string>
    <string name="stripe_api_key">pk_test_aZDl5CIKT9vXmbp1p3FGCnkH</string>
    <string name="faq_url">http://depextechnologies.org/okey-click/faq.php</string>
    <string name="contact_us_url">http://depextechnologies.org/okey-click/contact_us.php</string>
    <string name="term_and_condition_url">http://depextechnologies.org/okey-click/terms-and-conditions.php</string>
    <string name="data_protection_low_url">@string/term_and_condition_url</string>
    <string name="title_activity_web_inner_view">WebInnerViewActivity</string>
    <string name="first_name">First Name</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="upload_with">Upload With</string>
    <string name="base_fare">Base Fare</string>
    <string name="service_hour">Services</string>
    <string name="city_tax">City Tax</string>
    <string name="total">Total</string>
    <string name="booking_confirmed_msg">Your Booking is confirmed !</string>
    <string name="booking_confirm_title">Booking Confirm</string>
    <string name="ok">OK</string>
    <string name="booking_date_confirm_msg">Do you want to confirm this booking date !</string>


</resources>
