<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.depex.okeyclick.user.screens.LoginActivity">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:background="@drawable/slider2"
                android:layout_width="match_parent"
                android:layout_height="170dp" />
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="193dp"
                android:layout_height="80dp"
                android:src="@drawable/logo"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="-50dp"
                />
            <Button
                android:background="#00000000"
                android:text="@string/skip"
                android:id="@+id/skip_btn"
                android:layout_gravity="right"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="wrap_content"
                android:layout_height="25dp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:layout_marginRight="@dimen/margin_right"
                android:layout_marginLeft="@dimen/margin_left"
                app:hintTextAppearance="@style/MyAppearance"
                >
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:maxLines="1"
                    android:shadowRadius="10"
                    android:textAppearance="@style/InputTextAppearance"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_marginRight="@dimen/margin_right"
                android:layout_marginLeft="@dimen/margin_left"
                app:hintTextAppearance="@style/MyAppearance"
                app:passwordToggleEnabled="true">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:textAppearance="@style/InputTextAppearance"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>



            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffffff"
                android:padding="10dp"
                android:text="@string/login"

                android:layout_marginRight="@dimen/margin_right"
                android:layout_marginLeft="@dimen/margin_left"
                android:id="@+id/login_btn"
                android:background="@color/login_btn"
                />
            <Button
                android:background="@color/colorPrimaryDark"
                android:id="@+id/signup_btn"
                android:text="@string/signup_txt"
                android:textColor="#ffffffff"
                android:layout_marginTop="@dimen/input_margin_top"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_marginRight="@dimen/margin_right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:text="Forget Password ?"
                android:layout_marginRight="@dimen/margin_right"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_gravity="right"
                android:background="#00ffffff"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>