<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/parent_constraint_layout"
    android:layout_height="match_parent"
    tools:context="com.depex.okeyclick.user.screens.JobAssignedActivity">

    <ImageView
        android:background="#44000000"
        android:elevation="10dp"
        android:id="@+id/back_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <TextView
        android:id="@+id/pending_request_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="124dp"
        android:elevation="18dp"
        android:text="@string/pending_customer_request"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/map_fragment_job_assigned_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.627" />

    <TextView
        android:id="@+id/pending_request_txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="124dp"
        android:elevation="18dp"
        android:text="@string/connecting_text"
        android:textColor="#ffffffff"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/map_fragment_job_assigned_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.336" />

    <com.mikhaellopez.circularprogressbar.CircularProgressBar
        android:id="@+id/circle_progress_bar"
        android:layout_width="150dp"
        android:layout_height="150dp"

        android:background="@drawable/progress_draw"
        android:elevation="15dp"
        app:cpb_progress="10"
        app:cpb_progressbar_color="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="@+id/map_fragment_job_assigned_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />



    <!--app:cpb_progressbar_color="#e18080"-->

    <fragment
        android:id="@+id/map_fragment_job_assigned_activity"
        android:layout_width="match_parent"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_height="match_parent"/>

    <LinearLayout

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:visibility="gone"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="0dp"
        android:id="@+id/service_provider_profilelayout"
        android:background="#ffffffff"
        android:layout_marginStart="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.makeramen.roundedimageview.RoundedImageView
            android:src="@drawable/logo"
            app:riv_corner_radius="100dp"
            android:id="@+id/profile_pic_activity_job_assigned"
            android:layout_width="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="50dp" />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/sp_name"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:text="@string/call_txt"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:id="@+id/call_btn_to_sp"
                android:layout_marginLeft="10dp"
                android:background="@color/login_btn"
                android:layout_width="0dp"
                android:textColor="#ffffffff"
                android:layout_height="match_parent" />
            <Button
                android:background="@color/colorPrimaryDark"
                android:textColor="#ffffffff"
                android:text="@string/view_profile_txt"
                android:id="@+id/view_profile_btn"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>